[package]
name = "oom-model"
version = "0.1.0"
authors = ["tbrand <taichiro0709@gmail.com>"]
edition = "2018"

[dependencies]
oom-schema = { path = "../oom-schema" }
diesel = { version = "1.0.0", features = ["chrono"] }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"